--- a/.github/workflows/lint-workflows.yaml
+++ b/.github/workflows/lint-workflows.yaml
@@ -13,4 +13,4 @@ permissions:
 
 jobs:
   lint-workflows:
-    uses: s${{ vars.SENZING_DEVSECOPS_ORG }}/build-resources/.github/workflows/lint-workflows.yaml@v1
+    uses: ${{ vars.SENZING_DEVSECOPS_ORG }}/build-resources/.github/workflows/lint-workflows.yaml@v1
